# hestia

./: .gitignore  CLAUDE.md  DIRECTIVE.md  README.md  TODO.md  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: pages.yml
data/: ingredients.yaml
data/recipes/: banchan_cucumber.yaml  banchan_lotus.yaml  banchan_potato.yaml  black_beans.yaml  blueberry_cheesecake.yaml  kimchi_green_onions.yaml  mango_habanaro_salsa.yaml  sourdough_bread.yaml  spanish_rice.yaml
docs/: index.md  quickstart.md
docs/assets/stylesheets/: hestia-docs.css
docs/guide/: ingredients.md  recipes.md  rendering.md  web.md
docs/reference/: catalog.md  cli.md  db.md  recipe.md  renderer.md
hestia/: __init__.py  builder.py  catalog.py  cli.py  db.py  html_notes.py  recipe.py  renderer.py  server.py  usda.py
hestia/templates/: _app.css.j2  _brand.css.j2  base.html.j2  index.html.j2  ingredient_detail.html.j2  ingredients.html.j2  recipe.html.j2  recipe.tex.j2
tests/: test_cli.py  test_html_notes.py  test_recipe.py  test_usda.py
